@@ -6,6 +6,8 @@
 	removed ::set_ascii_armor and ::set_text_mode
 	* seahorse-key-manager: Added disabled menu items for backup and
 	generating a revocation certificate, also reorderd menu items
+	* seahorse-import: OK not sensitive unless file exists or there is text
+	* seahorse-ops-data: Updated ::import for when there are no keys imported
 
 2003-03-08  Jacob Perkins  <jap1@users.sourceforge.net>
 
